# mycord

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  REFACTORING_ANALYSIS.md  client.c  client.h  server.py  tui.c  tui.h
